<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in" style="@style/LLScreen"
        android:background="@drawable/background3">
        <!--<TextView style="@style/GameTitle" />
        <TextView style="@style/GameBlurb" />-->

        <Button android:id="@+id/button_single_player"
            style="@style/MainScreenButton"
            android:text="@string/single_player" />
        <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
            style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen"
        android:background="@drawable/background">
        <TextView style="@style/GameTitle" />
        <Button android:id="@+id/button_single_player_2"
            style="@style/MainScreenButton"
            android:text="@string/single_player"
            android:textColor="#FFFFFF"/>
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/single_player_explanation"
            android:textColor="#FFFFFF"/>
        <Button android:id="@+id/button_quick_game"
            style="@style/MainScreenButton"
            android:text="@string/quick_game"
            android:textColor="#FFFFFF"/>
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/quick_game_explanation"
            android:textColor="#FFFFFF"/>
        <Button android:id="@+id/button_invite_players"
            style="@style/MainScreenButton"
            android:text="@string/invite_players"
            android:textColor="#FFFFFF"/>
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/invite_players_explanation"
            android:textColor="#FFFFFF"/>
        <Button android:id="@+id/button_see_invitations"
            style="@style/MainScreenButton"
            android:text="@string/see_invitations"
            android:textColor="#FFFFFF"/>
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/see_invitations_explanation"
            android:textColor="#FFFFFF"/>
        <Button android:id="@+id/button_sign_out"
            style="@style/SignOutButton"
            android:text="@string/sign_out" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <LinearLayout android:id="@+id/screen_game"
        android:background="@color/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1.0">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|top"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="0.07">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/otherPlayer2"
                android:id="@+id/score1"
                android:layout_weight="1"
                android:textColor="#fff"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/otherPlayer3"
                android:id="@+id/score2"
                android:layout_weight="1"
                android:textColor="#fff"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/otherPlayer4"
                android:id="@+id/score3"
                android:layout_weight="1"
                android:textColor="#fff"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/cardsLeft"
                android:layout_weight="1"
                android:textColor="#fff"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/timer"
                android:layout_weight="1"
                android:textColor="#fff7ff45"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="0dp"
            android:layout_weight="0.43"
            android:layout_marginBottom="5dp">

            <!--<ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/deckBack"
                android:src="@drawable/zzback_of_card"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_weight="0.9" />-->

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/imageButtonMainCard"
                android:layout_weight="1.39"
                android:src="@drawable/philosoraptor_1000" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/addTo"
                android:id="@+id/operation"
                android:background="#A4C2F4"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="14"
                android:id="@+id/AddNumber"
                android:background="#FFE599"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:layout_weight="0.15">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/imageButton1"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/zzback_of_card"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="1dp" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/imageButton2"
                android:layout_row="0"
                android:layout_column="1"
                android:src="@drawable/zzback_of_card"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="1dp" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/imageButton3"
                android:layout_row="0"
                android:layout_column="2"
                android:src="@drawable/zzback_of_card"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="1dp" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/imageButton4"
                android:layout_row="0"
                android:layout_column="3"
                android:src="@drawable/zzback_of_card"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="1dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:layout_weight="0.15">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/imageButton5"
                android:layout_row="1"
                android:layout_column="0"
                android:src="@drawable/zzback_of_card"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="1dp" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/imageButton6"
                android:layout_row="1"
                android:layout_column="1"
                android:src="@drawable/zzback_of_card"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="1dp" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/imageButton7"
                android:layout_row="1"
                android:layout_column="2"
                android:src="@drawable/zzback_of_card"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="1dp" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=""
                android:id="@+id/imageButton8"
                android:layout_row="1"
                android:layout_column="3"
                android:src="@drawable/zzback_of_card"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:layout_margin="1dp" />

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/submit"
            android:id="@+id/button9"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".1"
            android:background="#ffff4a4f"
            android:textColor="#fff"
            android:layout_marginTop="5dp" />
    </LinearLayout>

</FrameLayout>


